# filestatrec

./: Cargo.toml  LICENSE-MIT  README  README.md
src/: error.rs  main.rs  statfile.rs
