[package]
name = "filestatrec"
version = "0.0.5"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
edition = "2021"
description = "record mtime and mode for files in a git repository"
repository = "https://github.com/cesarb/filestatrec"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
nix = { version = "0.24.1", default-features = false, features = ["fs"] }
