[package]
name = "filestatrec"
version = "0.0.9"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
edition = "2021"
description = "record mtime and mode for files in a git repository"
repository = "https://github.com/cesarb/filestatrec"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
rust-version = "1.61"

[dependencies]
clap = { version = "4.0.0", features = ["cargo"] }
rustix = { version = "0.38.0", features = ["fs"] }
