[package]
name = "filestatrec"
version = "0.0.10"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
edition = "2024"
description = "record mtime and mode for files in a git repository"
repository = "https://codeberg.org/cesarb/filestatrec"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[dependencies]
clap = { version = "4.0.0", features = ["cargo"] }
rustix = { version = "1.0.0", features = ["fs"] }
